<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MuscatCollege1.0</string>
    <string name="muscat_college_string">Muscat College</string>
    <string name="copyright_2015_muscat_college_all_rights_reserved">Copyright © 2015 Muscat College. All rights reserved.</string>
    <string name="site_map">site_map</string>
    <string name="Home">Home</string>
    <string name="about_us">About us</string>
    <string name="academic">Academic Progammes</string>
    <string name="departments">Departments</string>
    <string name="research">Research</string>
    <string name="facilities">Facilities</string>
    <string name="student">Student</string>
    <string name="events">Events</string>
    <string name="contact_us">Contact us</string>

    <string name="hmmessage">HM\'s Message</string>
    <string name="chairmessage">Chairman\'s Message</string>
    <string name="dean">Dean\'s Message</string>
    <string name="board">Board of Trustes</string>
    <string name="vision">Vision, Mission and Objectives</string>
    <string name="oraganizational">Oraganizational Chart</string>
    <string name="quality">Quality Assurance</string>
    <string name="ceneric">Ceneric Graduate Attributes</string>
    <string name="Acdemic">Acdemic Affiliation and Partners</string>
    <string name="university">University of Stirling</string>
    <string name="scottish">Scottish Qualification</string>
    <string name="malaysia">University of Malaysia Pahang</string>
    <string name="about_mus">About Muscat College</string>
    <string name="aboutus">About Us</string>
    <string name="muscatprofile">Muscat College Profile</string>
    <string name="textview">Founded in year 1996, Muscat College is one of the oldest private colleges in Oman. Ever since, then college has been shouldering the responsibilities of teaching undergraduate students. Creative and innovative approaches towards efficient learning and scientific developments are at the core of our mission. We endeavour to create and enrich the environment that promotes intellectual pursuits atcritical thinking, excellence and the search for scientific knowledge befitting the national requirements. Faculty, staff and students, alike, cherish academic freedom with full responsibility. Muscat College was one of the pioneering colleges in Oman to initiate undergraduate studies at the Bachelor with Honours Degree Level. Muscat College is well known for the quality of its academic programs and supporting facilities and services, which aim at providing students with a true college education. The College offers undergraduate HND programs in affiliation with Scottish Qualification Authority (SQA), as well as Bachelor with Honours programs inaffiliation with Stirling University, Scotland. Recently the College signed a partnership agreement with Universiti Malaysia Pahang to offer focused Bachelor programs with Honors in focused technological fields such as Computer Network Systems, and Software Engineering for academic year 2015-2016. We plan to offer our first Masters programs in academic year 2017-2018. Our vision emphasizes to be a quality higher education institution of technology. Our mission is to provide quality higher education in Management and Information Technology in Oman within a culture of creativity and innovation. Our strategy for fulfilling our vision is to: (1) establish effective programs affiliated with world universities, (2) produce students with leadership qualities, (3) build strong links with communities and institutions in Oman and abroad, and (4) lay down a solid infrastructure for future research.</string>
    <string name="textView2">Muscat College was established in 1996 as a private academic Omani institution of higher education.</string>
    <string name="textView5">Muscat College is located in the capital-Muscat and started its first academic year in 1997.</string>
    <string name="textView6">Muscat College is under the supervision of the Ministry of Higher Education in Oman.</string>
    <string name="textView7">In 2001, the Scottish Qualifications Authority (SQA) approved Muscat College as an “SQA Centre” similar to the other centres in UK and Europe.</string>
    <string name="button3">Objectives</string>
    <string name="textView8">Muscat College has its own ambitious specific objectives which are centred on the followings:</string>
    <string name="textView9">To deliver a high level of academic education and practical skills through the various offered fields of specialisation to meet the demands of the current private and public sectors as well as the needs of the Sultanate’s development plans.</string>
    <string name="textView10">To develop student’s skills and intellectual abilities by keeping them at the forefront of their subject areas and in so doing they will be beneficial to themselves and their country.</string>
    <string name="textView11">To make sure that student’s learning environment is characterised by strict discipline and high ethical values, since students are the backbone of society, the creative thinkers of the future and the moving force to the wheel of progress development.</string>
    <string name="language">Language</string>
    <string name="agree">I agree</string>
    <string name="button">accepted</string>
    <string name="textview9">Administration and Finance</string>
    <string name="textview8">Admission and Registration</string>
    <string name="textview7">Quality Assurance</string>
    <string name="textview6">Academic Affairs</string>
    <string name="textview13">Important Links:</string>
    <string name="phone3">+968 24 503821</string>
    <string name="phone2">+968 24 501181</string>
    <string name="phone1">+968 91717716</string>
    <string name="textview3">PO Box 2910 Ruwi, PC 112 Sultanate of Oman</string>
    <string name="button4">Muscat College</string>
    <string name="button2">Contact Us</string>
    <string name="title_activity_main_home_navigation">MainHomeNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Muscat College,Muscat,Oman</string>
    <string name="nav_header_subtitle">info@muscatcollege.edu.om</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="gallary">Gallery</string>
    <string name="About_us">aboutus</string>
    <string name="home">home</string>
    <string name="SiteMap">SiteMap</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masterprogramme">Master Programme-University of Stirling</string>
    <string name="mscmanagement">MSc Management</string>
    <string name="universityofstirling">Bachelor with Honours Programme-University of Stirling</string>
    <string name="honoursinbusinessstudies">B.A. with Honours in Business Studies</string>
    <string name="accountancyandbusinessstudies">B.A. with Honours in Accountancy and Business Studies</string>
    <string name="accountancyandcomputingscience">B.A. with Honours in Accountancy and Computing Science</string>
    <string name="inbusinesscomputing">B.Sc. with Honours in Business Computing</string>
    <string name="incomputingscience">B.Sc. with Honours in Computing Science</string>
    <string name="hrmanagement">B.A. with Honours in HR management</string>
    <string name="inmarketing">B.A. with Honours in Marketing</string>
    <string name="ebrochures">E-Brochures</string>
    <string name="malaysiapahang">Bachelor with Honours Programme-University of Malaysia Pahang</string>
    <string name="projectmanagement">Bachelor of Project Management with Honours</string>
    <string name="systemsandnetworking">Bachelor of Computer Science(Computer Systems and Networking) with Honours</string>
    <string name="softwareengineering">Bachelor of Computer Science (Software Engineering) with Honours</string>
    <string name="calendars">Academic Calendars</string>
    <string name="programmesqa">Higher National Diploma Programme-SQA</string>
    <string name="business">HND in Business</string>
    <string name="accounting">HND in Accounting</string>
    <string name="softwaredevelopment">HND in Computing: Software Development</string>
    <string name="technicalsupport">HND in Computing: Technical Support</string>
    <string name="surveying">HND in Quantity Surveying</string>
    <string name="construction">HND in Construction Managment</string>
    <string name="fondationprogramme">The general Fondation Programme</string>
    <string name="save">save</string>
    <string name="name">Name</string>

</resources>
