<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/home_3"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/abous"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_academic"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/academic" />
        <item
            android:id="@+id/departments"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/departments" />
        <item
            android:id="@+id/research"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/research" />
        <item
            android:id="@+id/facilities"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/facilities" />
        <item
            android:id="@+id/student"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/student" />
        <item
            android:id="@+id/teacher"
            android:icon="@drawable/ic_menu_gallery"
            android:title="+ Teacher Profile New" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/gallary" />
            <item
                android:id="@+id/contact"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/contact_us"
               />
            <item
                android:id="@+id/SiteMap"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/SiteMap" />
        </menu>
    </item>


    <item android:title="Events">
    <menu>
        <item
            android:id="@+id/events"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/events" />

    </menu>
    </item>

</menu>
